# brightness_controller

./: CMakeLists.txt  brightnes_controller.h  brightness_controller.cpp  conanfile.py  image_controller.h  image_file_manager.cpp  image_file_manager.h  image_wrapper.cpp  image_wrapper.h  main.cpp
